--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -17,6 +17,7 @@ found in the LICENSE file.
     'timeline_process_test.html',
     'timeline_counter_test.html',
     'timeline_cpu_test.html',
+    'timeline_filter_test.html',
     'timeline_model_test.html',
     'timeline_track_test.html',
     'linux_perf_importer_test.html',
