--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -35,7 +35,7 @@ var TimelineSlice = tracing.TimelineSlice;
 var TimelineThreadSlice = tracing.TimelineThreadSlice;
 var TimelineThread = tracing.TimelineThread;
 var TimelineModel = tracing.TimelineModel;
-var TimelineFilter = tracing.TimelineFilter;
+var TimelineTitleFilter = tracing.TimelineTitleFilter;
 
 var createModelWithOneOfEverything = function() {
   var m = new TimelineModel();
@@ -127,17 +127,17 @@ tests.testModelCanImportEmpty = function() {
   m = new TimelineModel('');
 }
 
-tests.testTimelineFilter = function() {
+tests.testTimelineTitleFilter = function() {
   var s0 = new TimelineSlice('a', 0, 1, {}, 3);
-  assertFalse(new TimelineFilter('').matchSlice(s0));
+  assertFalse(new TimelineTitleFilter('').matchSlice(s0));
 
-  assertTrue(new TimelineFilter('a').matchSlice(s0));
-  assertFalse(new TimelineFilter('x').matchSlice(s0));
+  assertTrue(new TimelineTitleFilter('a').matchSlice(s0));
+  assertFalse(new TimelineTitleFilter('x').matchSlice(s0));
 
   var s1 = new TimelineSlice('ba', 0, 1, {}, 3);
-  assertTrue(new TimelineFilter('a').matchSlice(s1));
-  assertTrue(new TimelineFilter('ba').matchSlice(s1));
-  assertFalse(new TimelineFilter('x').matchSlice(s1));
+  assertTrue(new TimelineTitleFilter('a').matchSlice(s1));
+  assertTrue(new TimelineTitleFilter('ba').matchSlice(s1));
+  assertFalse(new TimelineTitleFilter('x').matchSlice(s1));
 }
 
 tests.testTimelineModel_toJSON = function() {
@@ -151,7 +151,6 @@ tests.testTimelineModel_findAllThreadsNamed = function() {
   t.name = 'CrBrowserMain';
 
   m.updateBounds();
-  console.log(m);
   var f = m.findAllThreadsNamed('CrBrowserMain');
   assertArrayEquals([t], f);
   f = m.findAllThreadsNamed('NoSuchThread');
