--- a/trunk/src/timeline_track_test.html
+++ b/trunk/src/timeline_track_test.html
@@ -75,7 +75,7 @@ found in the LICENSE file.
     ];
     var selection = new TimelineSelection();
     track.addAllObjectsMatchingFilterToSelection(
-        new tracing.TimelineFilter("b"), selection);
+        new tracing.TimelineTitleFilter("b"), selection);
 
     assertEquals(2, selection.length);
     assertEquals(track.slices[1], selection[0].slice);
@@ -438,7 +438,7 @@ found in the LICENSE file.
       new TimelineSlice('c', 2, 7.6, {}, 0.4)
     ];
     var sel = new tracing.TimelineSelection();
-    track.addAllObjectsMatchingFilterToSelection(new tracing.TimelineFilter("b"), sel);
+    track.addAllObjectsMatchingFilterToSelection(new tracing.TimelineTitleFilter("b"), sel);
     var ret;
 
     // Select to the right of B.
@@ -467,7 +467,7 @@ found in the LICENSE file.
 
     // Select A and then select left.
     var sel = new tracing.TimelineSelection();
-    track.addAllObjectsMatchingFilterToSelection(new tracing.TimelineFilter("a"), sel);
+    track.addAllObjectsMatchingFilterToSelection(new tracing.TimelineTitleFilter("a"), sel);
     var ret;
 
     selNone = new tracing.TimelineSelection();
