Settings base JS file and test This is really simple, it just gets and sets strings. Unit test documents how it casts various types to strings (poorly with objects). If a unit test is running, it stores settings in a local variable. If not, it stores them in localStorage. Let me know if this is too much magic.
BUG=

Review URL: https://codereview.appspot.com/6443075

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -35,6 +35,7 @@ found in the LICENSE file.
     'timeline_view_test.html',
     'timeline_analysis_test.html',
     'ui_test.html',
+    'settings_test.html',
   ];
 </script>
 <style>
