Show trace metadata in UI
BUG=45
TEST=trace_event_importer.html, timeline_view_test.html

Review URL: https://codereview.appspot.com/6420051

--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -110,6 +110,11 @@ base.defineModule('timeline_view_test')
       model.importErrors.push('Synthetic Import Error');
       model.updateBounds();
 
+      // Add data with metadata information stored
+      model.metadata.push({name: 'a', value: 'testA'});
+      model.metadata.push({name: 'b', value: 'testB'});
+      model.metadata.push({name: 'c', value: 'testC'});
+
       var view = new tracing.TimelineView();
       view.style.height = '400px';
       view.model = model;
